# rust-mc-classic

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: from_stream.rs  lib.rs  main.rs  serialize.rs
